--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,39 @@
 @plugin "daisyui" {
   themes: false;
 }
+
+.input-group {
+  position: relative;
+  margin: 20px 0;
+}
+
+.input-group label {
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  font-size: 18px;
+  color: black;
+  padding: 0 5px;
+  pointer-events: none;
+  transition: .5s;
+}
+
+.input-group input {
+  width: 400px;
+  height: 50px;
+  font-size: 16px;
+  color: black;
+  padding: 0 10px;
+  background: transparent;
+  border: 1.2px solid black;
+  outline: none;
+  border-radius: 5px;
+}
+
+.input-group input:focus~label,
+.input-group input:valid~label {
+  top: 0;
+  font-size: 16px;
+  background: #F3F4F6;
+}
